# 100rustsnippets

aoc-1-2020/: Cargo.toml
aoc-2015-day1/: Cargo.toml
aoc-2016-day1/: Cargo.toml
aoc-2020-day2/: Cargo.toml
aoc-2020-day3/: Cargo.toml
aoc-2021-day1/: Cargo.toml
aoc-2021-day10/: Cargo.toml
aoc-2021-day11/: Cargo.toml
aoc-2021-day12/: Cargo.toml
aoc-2021-day13/: Cargo.toml
aoc-2021-day15/: Cargo.toml
aoc-2021-day18/: Cargo.toml
aoc-2021-day2/: Cargo.toml
aoc-2021-day3/: Cargo.toml
aoc-2021-day5/: Cargo.toml
aoc-2021-day6/: Cargo.toml
aoc-2021-day7/: Cargo.toml
aoc-2021-day8/: Cargo.toml
aoc-2021-day9/: Cargo.toml
aoc-2022-day1/: Cargo.toml
aoc-2022-day15/: Cargo.toml
app/: Cargo.toml
ascii-hex-to-int/: Cargo.toml
binding-javascript/: Cargo.toml
calculateUpLinkDataMIC/: Cargo.toml
celcius2fahrnenheit/: Cargo.toml
cli-tutorial/: Cargo.toml
codewards/: Cargo.toml
codewards2/: Cargo.toml
codewards3/: Cargo.toml
codewars1/: Cargo.toml
codewars4/: Cargo.toml
complex-numbers/: Cargo.toml
crc16-EN-13757/: Cargo.toml  LICENSE_MIT  index.html
dupdel/: Cargo.toml
euler/: Cargo.toml
euler-5/: Cargo.toml
euler-6/: Cargo.toml
euler-7/: Cargo.toml
fibonacci/: Cargo.toml
graph-storage/: Cargo.toml
hecto/: Cargo.toml
lets-meet/: Cargo.toml
lettervaluesum/: Cargo.toml
lorawan-project-structure/: Cargo.toml
lorawan-project-structure-2/: Cargo.toml
lorawan-uplink-parser/: Cargo.toml
macro-mania/: Cargo.toml
math-tree-generator/: Cargo.toml
telegram-bot/: Cargo.toml
telegram-bot/src/: main.rs
(+102 files in other folders)
