[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
